2007-05-30  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/util/CheckIncludes.java: 
	Fixed bug causing check includes utility to use wrong path names
	
	* projects/core/xsl/utils.xsl: 
	Minor changes in javascript code for edit console

2007-05-30  jtl  <jtl@schlund.de>

	* src/de/schlund/pfixcore/util/DumpText.java: small cleanups 

2007-05-29  Martin Leidig  <mleidig@schlund.de>

	* projects/core/build/create_apacheconf.xsl: Removed the FollowSymLinks 
	option from the Location section, because it's ignored by Apache. Removed 
	the AllowOverride directive too, because it's only valid inside Directory 
	sections. Perhaps we should remove the entire section, but using Options
	without + or -, they aren't merged with other default options and some
	environments might have less restrictive defaults and could rely on  
	disabling some options (and enabling CGI execution via ExecCGI).

2007-05-29  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/ServletManager.java: Improved ExceptionProcessor
	retrieval. Now we retrieve the configured ExceptionProcessor by walking
	up the throwable's type hierarchy via reflection.

2007-05-25  jtl  <jtl@schlund.de>

	* src/de/schlund/pfixcore/util/DumpText.java: 
	* src/de/schlund/pfixcore/util/ImportText.java: new tools to dump and 
	import used include parts 
	* projects/dumptext.sh:
	* projects/importtext.sh: use the tools above.

2007-05-23  Martin Leidig  <mleidig@schlund.de>

	Added form submit token mechanism which can be used to prevent
	duplicate form submissions and handle transactional processing
	requirements.
	Using the pfx:token tag a hidden field with a random token is
	included into the parent form. The token is stored in the Context,
	keyed by a customizable name (by default pagename#elementid,
	which can be overwritten/replaced using the @name attribute).
	After the form is submitted the token is invalidated, submitting