@@ -101,34 +101,33 @@ public class ImportText {
     private void handleInclude(Document incdoc, Element usedinc, String path) throws Exception {    
         String part = usedinc.getAttribute("PART");
         String theme = usedinc.getAttribute("THEME");
+        String origcheck = usedinc.getAttribute("CHECK");
         Element themeelem = (Element) XPath.selectNode(incdoc, "/include_parts/part[@name = '" + part + "']/theme[@name = '" + theme + "']");
         Element themepart = (Element) XPath.selectNode(incdoc, "/include_parts/part[@name = '" + part + "']");
         if (themeelem != null) {
-            NodeList content = themeelem.getChildNodes();
-            int count = content.getLength();
+            NodeList oldcontent = themeelem.getChildNodes();
+            int count = oldcontent.getLength();
             for (int i = 0; i < count; i++) {
-                themeelem.removeChild(content.item(0));
+                themeelem.removeChild(oldcontent.item(0));
             }
-            content = usedinc.getChildNodes();
-            for (int i = 0; i < content.getLength(); i++) {
-                Node newnode = incdoc.importNode(content.item(i), true);
-                themeelem.appendChild(newnode);
-            }
+        } else if (themepart != null) {
+            themeelem = incdoc.createElement("theme");
+            themeelem.setAttribute("name", theme);
+            themepart.appendChild(incdoc.createTextNode("  "));
+            themepart.appendChild(themeelem);
+            themepart.appendChild(incdoc.createTextNode("\n"));
         } else {
-            if (themepart != null) {
-                Element newtheme = incdoc.createElement("theme");
-                newtheme.setAttribute("name", theme);
-                themepart.appendChild(incdoc.createTextNode("  "));
-                themepart.appendChild(newtheme);
-                themepart.appendChild(incdoc.createTextNode("\n"));
-                NodeList content = usedinc.getChildNodes();
-                for (int i = 0; i < content.getLength(); i++) {
-                    Node newnode = incdoc.importNode(content.item(i), true);
-                    newtheme.appendChild(newnode);
-                }
-            } else {
-                System.out.println("*** Didn't find part '" + part + "@" + path + "'. Ignoring.");
-            }
+            System.out.println("*** Didn't find part '" + part + "@" + path + "'. Ignoring.");
+            return;
+        }
+        String check = DumpText.md5ForNode(usedinc);
+        if (check != null && !check.equals(origcheck)) {
+            System.out.print("\nInfo: CHECK differs for '" + theme + "@" + part + "@" + path + "'");
+        }
+        NodeList content = usedinc.getChildNodes();
+        for (int i = 0; i < content.getLength(); i++) {
+            Node newnode = incdoc.importNode(content.item(i), true);
+            themeelem.appendChild(newnode);
         }
     }
 }
